Meta info added

--- a/index.html
+++ b/index.html
@@ -4,12 +4,44 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Bad Ass Minimalist</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name='keywords' content='Monowar'>
+      <meta name='author' content='Hussain Sumrat'>
+      <meta name='designer' content='Hussain Sumrat'>
+      <meta name='coverage' content='Worldwide'>
+      <meta name='distribution' content='Global'>
+        <!-- Search engines -->
+      <meta name="description" content="Personal Website of Monowar">
+      <!-- Google Plus -->
+      <!-- Update your html tag to include the itemscope and itemtype attributes. -->
+      <!-- html itemscope itemtype="http://schema.org/{CONTENT_TYPE}" -->
+      <meta itemprop="name" content="Monowar">
+      <meta itemprop="description" content="Personal Website of Monowar">
+      <meta itemprop="image" content="img/top-bg.jpg">
+      <!-- Twitter -->
+      <meta name="twitter:card" content="Personal Website of Monowar">
+      <meta name="twitter:site" content="@HSumrat">
+      <meta name="twitter:title" content="Monowar">
+      <meta name="twitter:description" content="Personal Website of Monowar">
+      <meta name="twitter:creator" content="@HSumrat">
+      <meta name="twitter:image:src" content="img/top-bg.jpg">
+      <meta name="twitter:player" content="">
+      <!-- Open Graph General (Facebook & Pinterest) -->
+      <meta property="og:url" content="">
+      <meta property="og:title" content="Monowar">
+      <meta property="og:description" content="Personal Website of Monowar">
+      <meta property="og:site_name" content="">
+      <meta property="og:image" content="img/top-bg.jpg">
+      <meta property="fb:admins" content="">
+      <meta property="fb:app_id" content="599581040221539">
+      <meta property="og:type" content="">
+      <meta property="og:locale" content="">
+      <meta property="og:audio" content="">
+      <meta property="og:video" content="">
+
+      <title>Monowar</title>
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
