--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="container-fluid>
         <div class="row">
           <video id="img/my-video" class="video-js" controls preload="auto" width="100%" height="100%"
-            poster="poster-video.jpg" data-setup="{}">
+            poster="img/poster-video.jpg" data-setup="{}">
               <source src="https://bert.house/video/Bert_website.mp4"></source>
               <source src="https://bert.house/video/Bert_website.webm"></source>
               <p class="vjs-no-js">
