--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <link rel="stylesheet" href="css/responsive.css">
       <link rel="stylesheet" href="css/font-icon.css">
       <link rel="stylesheet" href="css/animate.min.css">
-      <link href="http://vjs.zencdn.net/5.11.7/video-js.css" rel="stylesheet">
+      <link href="//vjs.zencdn.net/5.11.7/video-js.css" rel="stylesheet">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
       <!-- If you'd like to support IE8 -->
@@ -285,7 +285,7 @@
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/jquery.fancybox.pack.js"></script> 
         <script src="js/jquery.waypoints.min.js"></script> 
-        <script src="http://vjs.zencdn.net/5.11.7/video.js"></script>
+        <script src="//vjs.zencdn.net/5.11.7/video.js"></script>
 
         <script src="js/main.js"></script>
 
