--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="header-content clearfix"> <a class="logo" href="index.html">MONWAR</a>
           <nav class="navigation" role="navigation">
             <ul class="primary-nav">
-              <li><a href="#intro">About</a></li>
+              <li><a href="#video-section">About</a></li>
               <li><a href="#services">services</a></li>
               <li><a href="#works">Works</a></li>
               <li><a href="#blog">Blog</a></li>
@@ -88,7 +88,7 @@
     </section><!-- header section --> 
     
     <!-- intro section -->
-    <section id="intro" class="intro">
+    <section id="video-section">
       <div class="container-fluid>
         <div class="row">
           <video id="img/my-video" class="video-js" controls preload="auto" width="100%" height="100%"
