--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
     <section id="video-section">
       <div class="container-fluid>
         <div class="row">
-          <video id="img/my-video" class="video-js" controls preload="auto" width="100%" height="100%"
+          <video id="img/my-video" class="js-bert-video js-custom-video-player video-js vjs-default-skin about-video" controls preload="auto" width="100%" height="100%"
             poster="img/poster-video.jpg" data-setup="{}">
-              <source src="https://bert.house/video/Bert_website.mp4"></source>
-              <source src="https://bert.house/video/Bert_website.webm"></source>
-              <p class="vjs-no-js">
-                To view this video please enable JavaScript, and consider upgrading to a web browser that
-                <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
-              </p>
-            </video>
+            <source src="https://bert.house/video/Bert_website.mp4"></source>
+            <source src="https://bert.house/video/Bert_website.webm"></source>
+            <p class="vjs-no-js">
+              To view this video please enable JavaScript, and consider upgrading to a web browser that
+              <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+            </p>
+          </video>
         </div>
       </div>
     </section><!-- intro section --> 
