added local vjs

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <link rel="stylesheet" href="css/responsive.css">
       <link rel="stylesheet" href="css/font-icon.css">
       <link rel="stylesheet" href="css/animate.min.css">
-      <link href="//vjs.zencdn.net/5.11.7/video-js.css" rel="stylesheet">
+      <link href="css/video-js.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
       <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -417,7 +417,7 @@
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/jquery.fancybox.pack.js"></script> 
         <script src="js/jquery.waypoints.min.js"></script> 
-        <script src="//vjs.zencdn.net/5.11.7/video.js"></script>
+        <script src="js/vendor/video.js.min"></script>
 
         <script src="js/main.js"></script>
 
