new look in home page

--- a/contact.html
+++ b/contact.html
@@ -61,13 +61,12 @@
     <!-- header section -->
     <section class="contact-banner" role="banner">
       <header id="header">
-        <div class="header-content clearfix"> <a class="logo" href="index.html">MONWAR</a>
+        <div class="header-content clearfix"> <a class="logo" href="index.html">MONOWAR</a>
           <nav class="navigation" role="navigation">
             <ul class="primary-nav">
               <li><a href="#intro">About</a></li>
-              <li><a href="#services">services</a></li>
-              <li><a href="#works">Works</a></li>
-              <li><a href="#blog">Blog</a></li>
+              <li><a href="career.html">Career</a></li>
+              <li><a href="#">News</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
           </nav>
@@ -124,8 +123,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/jquery.fancybox.pack.js"></script> 
+        <script src="js/vendor/bootstrap.min.js"></script> 
         <script src="js/jquery.waypoints.min.js"></script> 
 
         <script src="js/main.js"></script>
