--- a/contact.html
+++ b/contact.html
@@ -92,10 +92,10 @@
                     <h1>Address:<br><span>Dhaka, Bangladesh</span></h1>
                 </div>
                 <div class="col-md-4">
-                    <h1>Email:<br><span>itsumrat@gmail.com</span></h1>
+                    <h1>Email:<br><span>monowarbang@gmail.com <br>monowar_hossain@yahoo.com</span></h1>
                 </div>
                 <div class="col-md-4">
-                    <h1>Mobile No:<br><span>01681175864</span></h1>
+                    <h1>Contact No:<br><span>+88 01853 705 516</span></h1>
                 </div>
             </div>
         </div>
