--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             <h1 class="pulse">Hello</h1>
             <p>Lorem ipsum dolor sit ametcursus magna vel scelerisque Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.nisl consectetur et.</p>
             <ul class="social-links">
-              <li><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></li>
-              <li><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></li>
-              <li><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></li>
+              <li><a href="https://www.facebook.com/liton.uits"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://twitter.com/litoncse3"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://bd.linkedin.com/in/monowar-hossain-88456691"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
             </ul>
-            <a href="#" class="btn btn-large">download resume</a> 
+            <a href="doc/cv.pdf" class="btn btn-large" target="_blank">download resume</a> 
           </div>
           <!-- banner text --> 
         </div>
@@ -127,6 +127,8 @@ sports. I have greatly inspired by the scouting movement of Robert Baden-Powell 
       </div>
     </section>
     <!-- #About Me Text -->
+
+    <section id="fo"></section>
 
     <footer>
       <ul class="social-links">
