--- a/career.html
+++ b/career.html
@@ -77,145 +77,56 @@
       <div class="container-fluid">
         <div class="col-md-10 col-md-offset-1">
           <div class="banner-text text-center">
-            <div class="big-section cover-section">
-              <div class="content-container half-container" id="topSection">
-                  <div class="first-top-part">
-                      <div class="diamond-container">
-                          <div class="diamond-background">
-                              <div class="diamond-inner"></div>
-                          </div>
-                      </div>
-                      <div class="diamond-container">
-                          <div class="diamond-background">
-                              <div class="diamond-inner"></div>
-                          </div>
-                      </div>
-                      <div class="diamond-container">
-                          <div class="diamond-background">
-                              <div class="diamond-inner"></div>
-                          </div>
-                      </div>
-                      <div class="diamond-container">
-                          <div class="diamond-background">
-                              <div class="diamond-inner"></div>
-                          </div>
-                      </div>
-                      <div class="diamond-container">
-                          <div class="diamond-background">
-                              <div class="diamond-inner"></div>
-                          </div>
-                      </div>
-                      <div class="diamond-container"></div>
-                  </div>
-                  <div class="first-background-part"></div>
-                  <div class="first-overlap-part"></div>
-                  <div class="first-bottom-part">Or an image or something.<br><br>It would probably make this<br>look way better.</div>
-                  <div class="first-corner-part">
-                      <div class="corner-diamond-container"></div>
-                      <div class="social-buttons-container">
-                          <div class="social-button facebook-button"></div>
-                          <div class="social-button github-button"></div>
-                          <div class="social-button twitter-button"></div>
-                          <div class="social-button pinterest-button"></div>
-                          <div class="social-button linkedin-button"></div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-<div class="big-section first-page-section">
-    <div class="content-container full-page-container" id="hipsterSection">
-        <div class="hipster-left-half"></div>
-        <div class="hipster-right-half">
-            <div class="hipster-scroll-selector">
-                <a class="hipster-selector-link active" href="#chillwaveBox">Chillwave</a>
-                <a class="hipster-selector-link" href="#photographyBox">Photography</a>
-                <a class="hipster-selector-link" href="#styleBox">Style</a>
-                <a class="hipster-selector-link" href="#yoloBox">YOLO</a>
-            </div>
-            <div class="hipster-selection-container">
-                <div class="selection-box photography-box" id="photographyBox">
-                    <div class="quarter-square top-left">
-                        <div class="old-timey-photo one"></div>
-                    </div>
-                    <div class="quarter-square top-right">
-                        <p class="center-text">VHS stumptown offal kale chips. Tacos DIY helvetica pop-up ugh. Kale chips taxidermy ethical blue bottle meggings, blog kogi 90's keffiyeh.</p>
-                    </div>
-                    <div class="quarter-square bottom-left">
-                        <p class="center-text">Offal flannel austin pour-over, deep v beard ennui butcher kogi microdosing chillwave. Thundercats lo-fi vegan cornhole, pinterest etsy waistcoat locavore.</p>
-                    </div>
-                    <div class="quarter-square bottom-right">
-                        <div class="old-timey-photo two"></div>
-                    </div>
-                </div>
-                <div class="selection-box style-box" id="styleBox">COMING SOON!</div>
-                <div class="selection-box yolo-box" id="yoloBox">
-                    <div class="yolo-art">#YOLO</div>
-                </div>
-                <div class="selection-box chillwave-box active" id="chillwaveBox">
-                    <div class="chillwave-art one"></div>
-                    <div class="chillwave-art two"></div>
-                    <div class="chillwave-top-text">THIS IS CHILLWAVE!</div>
-                    <div class="chillwave-bottom-text">Chillwave, also known as glo-fi or downtempo pop, is a genre of music whose artists are often characterized by their heavy use of effects processing, synthesizers, looping, sampling, and heavily filtered vocals with simple melodic lines.</div>
+            <div class="big-section first-page-section" id="topSection">
+                <div class="intro">
+                  <h1>Hello<br><span>I am a Network Engineer<br>Let's Explore</span></h1>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<div class="big-section second-page-section">
-    <div class="content-container full-page-container"  id="thirdSection">
-        <div class="inner-content-container">
-            <div class="rela-block third-header-bar">
-                <div class="logo"><span>Placeholder</span>Studios</div>
-                <input type="checkbox" id="menuButton" />
-                <label class="hamburger-thing" for="menuButton">
-                    <div class="white-bar"></div>
-                    <div class="white-bar"></div>
-                    <div class="white-bar"></div>
-                    <div class="white-bar"></div>
-                </label>
+            <div class="big-section second-page-section" id="jobSection">
+                <h3>1.  Maintenance Support Engineer ( June 1, 2016 - Continuing) </h3>
+  
+                    <address>
+                      <h5>Huawei Technologies Bangladesh Limited.</h5> 
+                      Company Location : Lotus Kamal Tower - 2 (6, 7, 8, 9th Floor), Plot Number - 59 & 61 Gulshan Ave, Dhaka, Bangladesh. <br>
+                      Department: Info-Sarker Project <br>
+                      Duties/Responsibilities: 
+                      Monitor, maintain and troubleshoot system and services quickly and efficiently,Must be technically skilled in diagnosing, troubleshooting and resolving hardware and software problems & Outstanding customer service skills and a dedication to the customer service .
+                    </address>
+
+
+                <h3>2.  System Engineer/Supervisior ( May 1, 2015 - May 31, 2016) </h3>
+                    <address>
+                      <h5>Starlink engineering ltd.</h5>
+                      Company Location : Flat#A-1, House#83, Road No 23, Dhaka, Bangladesh, 1212 Dhaka, Bangladesh <br>
+                      Department: Telecommunication <br>
+                      Duties/Responsibilities: 
+                      Initial survey, installation, testing, commissioning, O&M in the field of Core Department.
+                    </address>
+
+
+                <h3>3.  Database Administrator  ( May 1, 2014 - April 29, 2015) </h3>
+                    <address>
+                      <h5>Micro Parts Ltd </h5>
+                      Company Location: Baridhara DOSH,Gulshan,Dhaka <br>
+                      Department: Information Technology(IT) <br>
+                      Duties/Responsibilities: 
+                      Management IT Product and Database administrator. 
+                    </address>
+
             </div>
-            <div class="rela-block third-top-image-container">
-                <div class="pop-text-container">
-                    <h2 class="rela-block pop-text">Bring your biggest ideas <span>to life.</span></h2>
-                    <p class="rela-block smaller-pop-text">Talk to specialists who are working with the most innovative companies in the world!</p>
-                </div>
-                <div class="down-arrow"></div>
+            <div class="big-section third-page-section" id="trainingSection">
+
             </div>
-            <div class="rela-block third-info-container">
-                <h2>This is some information. Placeholder text for testing.</h2>
-                <div class="ps4-side-image"></div>
+            <div class="big-section bottom-section" id="certificateSection">
+
             </div>
-            <div class="rela-block third-footer-container"></div>
-        </div>
-        <div class="side-bar">
-            <ul class="side-bar-item-container">
-                <li class="side-bar-item">The Team</li>
-                <li class="side-bar-item">Projects</li>
-                <li class="side-bar-item">Services</li>
-                <li class="side-bar-item">Contact us</li>
-            </ul>
-        </div>
-    </div>
-</div>
-<div class="big-section third-page-section">
-    <div class="content-container full-page-container"  id="fourthSection">
-        <div class="flex-half"></div>
-        <div class="flex-half"></div>
-    </div>
-</div>
-<div class="big-section bottom-section">
-    <div class="content-container full-page-container"  id="bottomSection">
-        <div class="flex-half"></div>
-        <div class="flex-half"></div>
-    </div>
-</div>
-<div class="side-buttons-container">
-    <a class="side-button active" href="#topSection" id="topButton"></a>
-    <a class="side-button" href="#hipsterSection" id="hipsterButton"></a>
-    <a class="side-button" href="#thirdSection" id="thirdButton"></a>
-    <a class="side-button" href="#fourthSection" id="fourthButton"></a>
-    <a class="side-button" href="#bottomSection" id="bottomButton"></a>
-</div> 
+            <div class="side-buttons-container">
+                <a class="side-button active" href="#topSection" id="topButton"></a>
+                <a class="side-button" href="#jobSection" id="jobButton"></a>
+                <a class="side-button" href="#trainingSection" id="trainingdButton"></a>
+                <a class="side-button" href="#certificateSection" id="certificateButton"></a>
+                <a class="side-button" href="#thesisSection" id="thesisButton"></a>
+            </div> 
           </div>
           <!-- banner text --> 
         </div>
