--- a/index.html
+++ b/index.html
@@ -114,13 +114,11 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-1">
             <div class="about-me">
-              <p>Md. Monowar Hossain Liton was born on 10 July 1992 <a href="https://goo.gl/iGcJVW">Kalai</a> under Joypurhat district. Md.Jahangir Alam and
-Ms. Bilkis Bibi are his parents. His father was an active political activist being inspired by the ideology of
-Hussain Muhammad Ershad. Being the then Secretary of the Matrai Union unit of Jatiya Party.<p>
-<p>I have  passed SSC examination from the Raigram high School in 2007, group of Science under <a href="http://www.rajshahieducationboard.gov.bd/">Rajshahi Educational Board</a> and HSC examination from the <a href="http://www.jgcbd.edu.bd/"> Joypurhat Govenment College </a> in 2009,group of Sciences under Rajshahi Educational Board. He obtained B.Sc in Computer Science and Engineering (CSE) from <a href="http://www.uits.edu.bd/">University of Information and Technology</a>, M.SC in Computer Science and Engineering (CSE) from <a href="http://www.daffodilvarsity.edu.bd/">Daffodil International University</a> (DIU) </p>
-<p>Then, I have started my career as a professional as System Engineer in the <a href="https://www.facebook.com/starlinkbd/">starlink engineering ltd</a> and now he is a Maintenance Support Engineer of the <a href="http://www.huawei.com/bd/">Huawei Technologies Bangladesh Limited</a>. I am Network Safety Operation (DATA COM.), certified id: 20160918SM003 From Huawei Technologies Bangladesh Limited.</p>
-<p> I like to do very conspicuous in different co-curricular activities, like Travels, recitation and
-sports. I have greatly inspired by the scouting movement of Robert Baden-Powell during his school life.</p>
+              <p>I was born on 10 July 1992 <a href="https://goo.gl/iGcJVW">Kalai</a> under Joypurhat district. Md.Jahangir Alam and Ms. Bilkis Bibi are my parents. My father is an active political activist being inspired by the ideology of Hussain Muhammad Ershad. Being the then Secretary of the Matrai Union unit of Jatiya Party.<p>
+              <p>I have  passed SSC examination from the Raigram high School in 2007, group of Science under <a href="http://www.rajshahieducationboard.gov.bd/">Rajshahi Educational Board</a> and HSC examination from the <a href="http://www.jgcbd.edu.bd/"> Joypurhat Government College </a> in 2009,group of Sciences under Rajshahi Educational Board. I've obtained B.Sc in Computer Science and Engineering (CSE) from <a href="http://www.uits.edu.bd/">University of Information Technology and Sciences</a>, M.SC in Computer Science and Engineering (CSE) from <a href="http://www.daffodilvarsity.edu.bd/">Daffodil International University</a> (DIU) </p>
+              <p>Then, I have started my career as a professional System Engineer at <a href="https://www.facebook.com/starlinkbd/">starlink engineering ltd</a> and now I'm a Maintenance Support Engineer of <a href="http://www.huawei.com/bd/">Huawei Technologies Bangladesh Limited</a>. I am Network Safety Operation (DATA COM.), certified (id: 20160918SM003) from Huawei Technologies Bangladesh Limited.</p>
+              <p> I like to do very conspicuous in different co-curricular activities, like travels, recitation and
+              sports.</p>
             </div>
           </div>
         </div>
@@ -128,7 +126,7 @@ sports. I have greatly inspired by the scouting movement of Robert Baden-Powell 
     </section>
     <!-- #About Me Text -->
 
-    <section id="fo"></section>
+    <section id="wave"></section>
 
     <footer>
       <ul class="social-links">
