changes social img

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             <h1 class="pulse">Hello</h1>
             <p>Lorem ipsum dolor sit ametcursus magna vel scelerisque Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.nisl consectetur et.</p>
             <ul class="social-links">
-              <li><a href="https://www.facebook.com/liton.uits"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-              <li><a href="https://twitter.com/litoncse3"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li>
-              <li><a href="https://bd.linkedin.com/in/monowar-hossain-88456691"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.facebook.com/liton.uits"><img src="img/facebook-256.png"></a></li>
+              <li><a href="https://twitter.com/litoncse3"><img src="img/twitter-256.png"></a></li>
+              <li><a href="https://bd.linkedin.com/in/monowar-hossain-88456691"><img src="img/linkedin-256.png"></a></li>
             </ul>
             <a href="doc/cv.pdf" class="btn btn-large" target="_blank">download resume</a> 
           </div>
