--- a/contact.html
+++ b/contact.html
@@ -64,10 +64,10 @@
         <div class="header-content clearfix"> <a class="logo" href="index.html">MONOWAR</a>
           <nav class="navigation" role="navigation">
             <ul class="primary-nav">
-              <li><a href="#intro">About</a></li>
+              <li><a href="index.html#about">About</a></li>
               <li><a href="career.html">Career</a></li>
               <li><a href="#">News</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </nav>
           <a href="#" class="nav-toggle">Menu<span></span></a> </div>
