changes picture & font

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <ul class="primary-nav">
               <li><a href="#video-section">About</a></li>
               <li><a href="career.html">Career</a></li>
-              <li><a href="#">News</a></li>
+              <li><a href="news.html">News</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
