--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             <ul class="primary-nav">
               <li><a href="index.html#about">About</a></li>
               <li><a href="career.html">Career</a></li>
-              <li><a href="#">News</a></li>
+              <li><a href="news.html">News</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
           </nav>
