--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
         <meta property="og:audio" content="">
         <meta property="og:video" content="">
 
-        <title>Monowar</title>
+        <title>Monowar Hossain</title>
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
