unnecessary js & css files deleted

--- a/index.html
+++ b/index.html
@@ -45,11 +45,8 @@
 
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-      <link rel="stylesheet" href="css/jquery.fancybox.css">
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="css/responsive.css">
-      <link rel="stylesheet" href="css/font-icon.css">
-      <link rel="stylesheet" href="css/animate.min.css">
       <link href="css/video-js.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
@@ -141,9 +138,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/jquery.waypoints.min.js"></script> 
-        <script src="js/vendor/video.js.min"></script>
-
+        <script src="js/vendor/video.min.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
