--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <link rel="stylesheet" href="css/responsive.css">
       <link href="css/video-js.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
+      <link rel="stylesheet" type="text/css" href="css/video-js.min.css">
       <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
