--- a/index.html
+++ b/index.html
@@ -85,29 +85,21 @@
               <li><a href="https://twitter.com/litoncse3"><img src="img/twitter-256.png"></a></li>
               <li><a href="https://bd.linkedin.com/in/monowar-hossain-88456691"><img src="img/linkedin-256.png"></a></li>
             </ul>
+            <a class="button" href="#popup1">Let me Pop up</a>
+            <div id="popup1" class="overlay">
+              <div class="popup">
+                <a class="close" href="#">&times;</a>
+                <div class="content">
+                  <iframe width="640" height="360" src="https://www.youtube.com/embed/1cgKXnI0PA0" frameborder="0" allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
             <a href="doc/cv.pdf" class="btn btn-large" target="_blank"><span>download resume</span></a> 
           </div>
           <!-- banner text --> 
         </div>
       </div>
     </section><!-- header section --> 
-    
-    <!-- intro section -->
-    <section id="video-section">
-      <div class="container-fluid>
-        <div class="row">
-          <video id="img/my-video" class="js-bert-video js-custom-video-player video-js vjs-default-skin about-video" controls preload="auto" width="100%" height="100%"
-            poster="img/poster-video.jpg" data-setup="{}">
-            <source src="https://bert.house/video/Bert_website.mp4"></source>
-            <source src="https://bert.house/video/Bert_website.webm"></source>
-            <p class="vjs-no-js">
-              To view this video please enable JavaScript, and consider upgrading to a web browser that
-              <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
-            </p>
-          </video>
-        </div>
-      </div>
-    </section><!-- intro section --> 
 
     <!-- About Me Text -->
     <section id="about">
