play button changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
       <link rel="stylesheet" href="css/bootstrap-theme.min.css">
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="css/responsive.css">
-      <link href="css/video-js.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
       <link rel="stylesheet" type="text/css" href="css/video-js.min.css">
       <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -85,7 +84,7 @@
               <li><a href="https://twitter.com/litoncse3"><img src="img/twitter-256.png"></a></li>
               <li><a href="https://bd.linkedin.com/in/monowar-hossain-88456691"><img src="img/linkedin-256.png"></a></li>
             </ul>
-            <a class="button" href="#popup1">Let me Pop up</a>
+            <a class="play" href="#popup1"><i class="fa fa-play fa-3x" aria-hidden="true"></i></a>
             <div id="popup1" class="overlay">
               <div class="popup">
                 <a class="close" href="#">&times;</a>
@@ -94,7 +93,7 @@
                 </div>
               </div>
             </div>
-            <a href="doc/cv.pdf" class="btn btn-large" target="_blank"><span>download resume</span></a> 
+            <a href="doc/cv.pdf" class="btn btn-large" target="_blank"><span>cv</span></a> 
           </div>
           <!-- banner text --> 
         </div>
@@ -134,7 +133,6 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/vendor/video.min.js"></script>
         <script src="js/main.js"></script>
         <script type="text/javascript">
           $(window).load(function() {
