--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <!-- Loader -->
-        <div class="loader"></div>
+        <div class="loader">
+          <img class="img-responsive" src="http://www.smurfitkappa-tubes.com/app/sites/all/themes/smurfitkappa/assets/imgs/commons/logo-white.png">
+        </div>
         <!-- #Loader -->
 
     <!-- header section -->
@@ -85,6 +87,7 @@
               <li><a href="https://bd.linkedin.com/in/monowar-hossain-88456691"><img src="img/linkedin-256.png"></a></li>
             </ul>
             <a class="play" href="#popup1"><i class="fa fa-play fa-3x" aria-hidden="true"></i></a>
+            <a href="doc/cv.pdf" class="btn btn-large" target="_blank"><span>cv</span></a> 
             <div id="popup1" class="overlay">
               <div class="popup">
                 <a class="close" href="#">&times;</a>
@@ -93,12 +96,53 @@
                 </div>
               </div>
             </div>
-            <a href="doc/cv.pdf" class="btn btn-large" target="_blank"><span>cv</span></a> 
+            
           </div>
           <!-- banner text --> 
         </div>
       </div>
     </section><!-- header section --> 
+
+    <section class="intro">
+      <div class="left">
+        <div>
+          <h1>The Places Where You Will</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos eveniet amet excepturi voluptates dolorem totam ad quod hic, porro accusamus, repellat, corrupti at obcaecati ducimus, dolor quibusdam sequi nemo inventore?</p>
+          <a href="https://unsplash.com/" target="_blank">Images by Unsplash</a>
+        </div>
+      </div>
+
+      <div class="slider">
+        <ul>
+          <li style="background-image:url(https://images.unsplash.com/photo-1458640904116-093b74971de9?crop=entropy&fit=crop&fm=jpg&h=675&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375)">
+            <div class="center-y">
+              <h3>Slider Title #1</h3>
+              <a href="#">View Project</a>  
+            </div>
+          </li>
+          <li style="background-image:url(https://images.unsplash.com/photo-1451906278231-17b8ff0a8880?crop=entropy&fit=crop&fm=jpg&h=675&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375)">
+            <div class="center-y">
+              <h3>Slider Title #2</h3>
+              <a href="#">View Project</a>  
+            </div>
+          </li>
+          <li style="background-image:url(https://images.unsplash.com/photo-1456428199391-a3b1cb5e93ab?crop=entropy&fit=crop&fm=jpg&h=675&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375)">
+            <div class="center-y">
+              <h3>Slider Title #3</h3>
+              <a href="#">View Project</a>  
+            </div>
+          </li>
+        </ul>
+
+        <ul>
+          <nav>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+          </nav>
+        </ul>
+      </div>
+    </section>
 
     <!-- About Me Text -->
     <section id="about">
