--- a/career.html
+++ b/career.html
@@ -60,7 +60,7 @@
         <div class="header-content clearfix"> <a class="logo" href="index.html">MONOWAR</a>
           <nav class="navigation" role="navigation">
             <ul class="primary-nav">
-              <li><a href="index.html#video-section">About</a></li>
+              <li><a href="index.html#about">About</a></li>
               <li><a href="career.html">Career</a></li>
               <li><a href="news.html">News</a></li>
               <li><a href="contact.html">Contact</a></li>
