--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="header-content clearfix"> <a class="logo" href="index.html">MONOWAR</a>
           <nav class="navigation" role="navigation">
             <ul class="primary-nav">
-              <li><a href="#video-section">About</a></li>
+              <li><a href="#about">About</a></li>
               <li><a href="career.html">Career</a></li>
               <li><a href="news.html">News</a></li>
               <li><a href="contact.html">Contact</a></li>
