customize career section

--- a/career.html
+++ b/career.html
@@ -110,18 +110,45 @@
 
             </div>
             <div class="big-section third-page-section" id="trainingSection">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
+                <h3>Development of National ICT Infra-Network for Bangladesh Government Phase-II (“Info-Sarkar”)</h3>
+                <h4>Bangladesh Computer Council (BCC)</h4>
+                <p>Topics: <i>Digital Subscriber Line Access Multiplexer (DSLAM), video conferencing (VC), National Telecommunication Transmission Network (NTTN), Fiber-optic communication (OFC),Huawei NetEngine40E Universal Service Routers & Medium Router installation ,Configuration and Maintenance.</i></p>
 
-                <p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
+                <h3>Networking Product Service</h3>
+                <h4>Huawei Technologies Co. Ltd.</h4>
+                <p>Topics: <i>Networking and Telecommunications Equipment and Services.</i></p>
 
-                <p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus. Nunc tellus ante, mattis eget, gravida vitae, ultricies ac, leo. Integer leo pede, ornare a, lacinia eu, vulputate vel, nisl.</p>
+                <h3>Implementation of web GIS</h3>
+                <h4>University of Information Technology & Science</h4>
+                <p>Topics: <i>Networking and Telecommunications Equipment and Services.</i></p>
+
+                <h3>Programming  Language</h3>
+                <h4>University of Information Technology & Science</h4>
+                <p>Topics: <i>Development Training workshop program for programming language.</i></p>
+
+                <h3>CISCO</h3>
+                <h4>University of Information Technology & Science</h4>
+                <p>Topics: <i>Network developing process</i></p>
+
+                <h3>Server</h3>
+                <h4>National Data Center (NDC),BCC</h4>
+                <p>Topics: <i>Server Monitoring & Maintenance</i></p>
+
             </div>
             <div class="big-section fourth-page-section" id="certificateSection">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
+                <h2>Professional certified:</h2>
+                <ul>
+                  <li>1.  Network Safety Operation (DATA COM) from Huawei Technologies (Bangladesh) Ltd.</li>  
+                  <li>2.  Huawei work permit certificate from Huawei Technologies (Bangladesh) Ltd.</li>  
+                  <li>3.  EHS Safety Passport from Huawei Technologies (Bangladesh) Ltd.</li> 
+                  <li>4.  Implementation of web GIS  from University of Information Technology & Sciences</li>          </ul>
 
-                <p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
+                <h2>Membership</h2>
+                <ul>
+                  <li>1.  Associate Member of Bangladesh Computer Society (BCS).</li>  
+                  <li>2.  General Member of Bangladesh Computer Council  (BCC)</li>  
+                </ul>
 
-                <p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ullamcorper laoreet, lectus arcu pulvinar risus, vitae facilisis libero dolor a purus. Sed vel lacus. Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus. Nunc tellus ante, mattis eget, gravida vitae, ultricies ac, leo. Integer leo pede, ornare a, lacinia eu, vulputate vel, nisl.</p>
             </div>
             <div class="big-section fifth-page-section" id="thesisSection">
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus hendrerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapibus id, mattis vel, nisi. Sed pretium, ligula sollicitudin laoreet viverra, tortor libero sodales leo, eget blandit nunc tortor eu nibh. Nullam mollis. Ut justo. Suspendisse potenti.</p>
